--- a/_config.yml
+++ b/_config.yml
@@ -1,8 +1,81 @@
-title: Just the Docs Template
-description: A starter template for a Jeykll site using the Just the Docs theme!
-theme: just-the-docs
+title: design﹢code
+author: Luciano Pereira
+email: lucianofullstack@duck.com
+description: "a blog about web development"
+copyright: "design﹢code (c) {currentYear} {author}"
 
-url: https://just-the-docs.github.io
+aux_links_new_tab: false
+heading_anchors: true
+nav_enabled: true
+search_enabled: true
+
+
+# `_includes/footer_custom.html`
+
+last_edit_timestamp: true
+last_edit_time_format: "%b %e %Y at %I:%M %p" # https://ruby-doc.org/stdlib-2.7.0/libdoc/time/rdoc/Time.html
+
+#gh_edit_link: true # show or hide edit this page link
+#gh_edit_link_text: "Edit this page on GitHub."
+#gh_edit_repository: "https://github.com/just-the-docs/just-the-docs" # the github URL for your repo
+#gh_edit_branch: "main" # the branch that your docs is served from
+## gh_edit_source: docs # the source that your files originate from
+#gh_edit_view_mode: "tree" # "tree" or "edit" if you want the user to jump into the editor immediately
+
+#color_scheme: dark
+
+# callouts:
+#   warning:
+#     title: Warning
+#     color: red
+# {: .warning }
+# A paragraph...
+# $pink-000: #f77ef1;
+# $pink-100: #f967f1;
+# $pink-200: #e94ee1;
+# $pink-300: #dd2cd4;
+# callouts:
+#   custom:
+#     color: pink
+#     opacity: 0.3
+# You can change the default opacity (0.2) for all callouts, e.g.:
+# callouts_opacity: 0.3
+# You can also adjust the overall level of callouts. The value of callouts_level is either quiet or loud; loud increases # the saturation and lightness of the backgrounds. The default level is quiet when using the light or custom color 
+# # schemes, and loud when using the dark color scheme.
+# https://just-the-docs.github.io/just-the-docs/docs/configuration/
+
+
+#collections:
+#  tests:
+#    permalink: "/:collection/:path/"
+#    output: true
+#just_the_docs:
+#  collections:
+#    tests:
+#      name: Tests
+      # nav_exclude: true
+      # nav_fold: true  # note: this option is new in v0.4
+      # search_exclude: true
+
+
+
 
 aux_links:
+  "Just the Docs on GitHub":
+    - "//github.com/just-the-docs/just-the-docs"
   Template Repository: https://github.com/just-the-docs/just-the-docs-template
+favicon_ico: "/assets/images/favicon.ico"
+logo: "/assets/images/favicon.ico"
+mermaid:
+  version: "11.4.1"
+search:
+  heading_level: 2 # 1-6
+  previews: 3
+  preview_words_before: 5
+  preview_words_after: 10
+  tokenizer_separator: /[\s/]+/
+  rel_url: true
+  button: false
+  focus_shortcut_key: 'k'
+theme: just-the-docs
+url: https://lucianofedericopereira.github.io/articles
