--- a/_config.yml
+++ b/_config.yml
@@ -12,8 +12,8 @@ search_enabled: true
 
 # `_includes/footer_custom.html`
 
-last_edit_timestamp: true
-last_edit_time_format: "%b %e %Y at %I:%M %p" # https://ruby-doc.org/stdlib-2.7.0/libdoc/time/rdoc/Time.html
+#last_edit_timestamp: true
+#last_edit_time_format: "%b %e %Y at %I:%M %p" # https://ruby-doc.org/stdlib-2.7.0/libdoc/time/rdoc/Time.html
 
 #gh_edit_link: true # show or hide edit this page link
 #gh_edit_link_text: "Edit this page on GitHub."
@@ -43,19 +43,28 @@ last_edit_time_format: "%b %e %Y at %I:%M %p" # https://ruby-doc.org/stdlib-2.7.
 # You can also adjust the overall level of callouts. The value of callouts_level is either quiet or loud; loud increases # the saturation and lightness of the backgrounds. The default level is quiet when using the light or custom color 
 # # schemes, and loud when using the dark color scheme.
 # https://just-the-docs.github.io/just-the-docs/docs/configuration/
-
-
-#collections:
-#  tests:
-#    permalink: "/:collection/:path/"
-#    output: true
-#just_the_docs:
 #  collections:
 #    tests:
 #      name: Tests
       # nav_exclude: true
       # nav_fold: true  # note: this option is new in v0.4
       # search_exclude: true
+
+
+collections:
+  css:
+    permalink: "/:collection/:path/"
+    output: true
+  js:
+    permalink: "/:collection/:path/"
+    output: true
+
+just_the_docs:
+  collections:
+    css:
+      name: CSS3
+    js:
+      name: JavaScript
 
 
 
