--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,7 @@
 title: design﹢code
 author: Luciano Pereira
 email: lucianofullstack@duck.com
-description: "a blog about web development"
+description: "a blog about development"
 copyright: "design﹢code (c) {currentYear} {author}"
 
 
