--- a/_config.yml
+++ b/_config.yml
@@ -65,9 +65,9 @@ just_the_docs:
 
 
 aux_links:
-  "Just the Docs on GitHub":
+  "LinkedIn":
     - "//github.com/just-the-docs/just-the-docs"
-  Template Repository: https://github.com/just-the-docs/just-the-docs-template
+  GitHub: https://github.com/just-the-docs/just-the-docs-template
 favicon_ico: "/assets/images/favicon.ico"
 logo: "/assets/images/favicon.ico"
 mermaid:
