--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,12 +1,9 @@
 name: CI
-
 on:
   push:
     branches: ["main"]
   pull_request:
-
 jobs:
-  # Build job
   build:
     runs-on: ubuntu-latest
     steps:
@@ -15,8 +12,8 @@ jobs:
       - name: Setup Ruby
         uses: ruby/setup-ruby@v1
         with:
-          ruby-version: '3.3' # Not needed with a .ruby-version file
-          bundler-cache: true # runs 'bundle install' and caches installed gems automatically
-          cache-version: 0 # Increment this number if you need to re-download cached gems
+          ruby-version: '3.3'
+          bundler-cache: true
+          cache-version: 0
       - name: Build with Jekyll
         run: bundle exec jekyll build
