--- a/_config.yml
+++ b/_config.yml
@@ -3,13 +3,10 @@ author: Luciano Pereira
 email: lucianofullstack@duck.com
 description: "a blog about development"
 copyright: "design﹢code (c) {currentYear} {author}"
-
+footer_content: "Copyright &copy; {currentYear} Luciano Perera"
 aux_links_new_tab: false
-heading_anchors: true
-nav_enabled: true
 search_enabled: true
-
-footer_content: "Copyright &copy; 2025 Luciano Perera"
+comments: false
 
 #last_edit_timestamp: true
 #last_edit_time_format: "%b %e %Y at %I:%M %p" # https://ruby-doc.org/stdlib-2.7.0/libdoc/time/rdoc/Time.html
