--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,7 @@
 title: design﹢code
 author: Luciano Pereira
 email: lucianofullstack@duck.com
-description: "a blog about development"
+description: "CodeCraft Chronicles"
 copyright: "design﹢code (c) {currentYear} {author}"
 footer_content: "Copyright &copy; {currentYear} Luciano Perera"
 aux_links_new_tab: false
