--- a/_config.yml
+++ b/_config.yml
@@ -31,6 +31,7 @@ defaults:
       type: "posts"
     values:
       comments: false
+      layout: codecraft
 aux_links:
   "LinkedIn":
     - "//github.com/just-the-docs/just-the-docs"
@@ -40,7 +41,7 @@ logo: "/assets/images/favicon.ico"
 mermaid:
   version: "11.4.1"
 search:
-  heading_level: 1 # 1-6
+  heading_level: 1
   previews: 3
   preview_words_before: 5
   preview_words_after: 10
