--- a/_config.yml
+++ b/_config.yml
@@ -9,6 +9,7 @@ search_enabled: true
 
 #last_edit_timestamp: true
 #last_edit_time_format: "%b %e %Y at %I:%M %p" # https://ruby-doc.org/stdlib-2.7.0/libdoc/time/rdoc/Time.html
+
 #gh_edit_branch: "main" # the branch that your docs is served from
 ## gh_edit_source: docs # the source that your files originate from
 
@@ -19,7 +20,6 @@ collections:
   js:
     permalink: "/:collection/:path/"
     output: true
-
 just_the_docs:
   collections:
     css:
@@ -27,11 +27,18 @@ just_the_docs:
     js:
       name: JavaScript
 defaults:
-  - scope:
+ -
+    scope:
+      type: "css"
+    values:
+      layout: codecraft
+      comments: true
+  - 
+    scope:
       type: "posts"
     values:
-      comments: false
       layout: codecraft
+      comments: false
 aux_links:
   "LinkedIn":
     - "//github.com/just-the-docs/just-the-docs"
