--- a/_config.yml
+++ b/_config.yml
@@ -51,3 +51,5 @@ search:
   focus_shortcut_key: 'k'
 theme: just-the-docs
 url: https://lucianofedericopereira.github.io/articles
+plugins:
+  - jekyll-default-layout
