--- a/_config.yml
+++ b/_config.yml
@@ -1,11 +1,14 @@
+links:
+  LinkedIn: https://github.com/just-the-docs/just-the-docs
+  GitHub: https://github.com/just-the-docs/just-the-docs-template      
+
+
 title: design﹢code
-author: Luciano Pereira
-email: lucianofullstack@duck.com
 description: "CodeCraft Chronicles"
+author: Luciano Pereira
+
 copyright: "design﹢code (c) {currentYear} {author}"
 footer_content: "Copyright &copy; {currentYear} Luciano Perera"
-aux_links_new_tab: false
-search_enabled: true
 
 #gh_edit_branch: "main" # the branch that your docs is served from
 ## gh_edit_source: docs # the source that your files originate from
