--- a/_config.yml
+++ b/_config.yml
@@ -1,3 +1,12 @@
+meta:
+  domain: https://lucianofedericopereira.github.io
+  author: Luciano Pereira
+
+  url: {meta.domain}/articles
+  assets: {meta.url}/assets
+  images: {meta.assets}/images
+  icon: {meta.images}/favicon.ico
+
 links:
   LinkedIn: https://github.com/just-the-docs/just-the-docs
   GitHub: https://github.com/just-the-docs/just-the-docs-template      
@@ -7,7 +16,7 @@ title: design﹢code
 description: "CodeCraft Chronicles"
 author: Luciano Pereira
 
-copyright: "design﹢code (c) {currentYear} {author}"
+copyright: "design﹢code (c) {currentYear} {meta.author}"
 footer_content: "Copyright &copy; {currentYear} Luciano Perera"
 
 #gh_edit_branch: "main" # the branch that your docs is served from
@@ -31,10 +40,6 @@ defaults:
     values:
       layout: codecraft
       comments: false
-aux_links:
-  "LinkedIn":
-    - "//github.com/just-the-docs/just-the-docs"
-  GitHub: https://github.com/just-the-docs/just-the-docs-template
 favicon_ico: "/assets/images/favicon.ico"
 logo: "/assets/images/favicon.ico"
 mermaid:
