--- a/_config.yml
+++ b/_config.yml
@@ -1,11 +1,10 @@
 meta:
-  domain: https://lucianofedericopereira.github.io
   author: Luciano Pereira
-
-  url: {meta.domain}/articles
-  assets: {meta.url}/assets
-  images: {meta.assets}/images
-  icon: {meta.images}/favicon.ico
+  domain: https://lucianofedericopereira.github.io
+  url: https://lucianofedericopereira.github.io/articles
+  assets: https://lucianofedericopereira.github.io/articles/assets
+  images: https://lucianofedericopereira.github.io/articles/assets/images
+  icon: https://lucianofedericopereira.github.io/articles/assets/images/favicon.ico
 
 links:
   LinkedIn: https://github.com/just-the-docs/just-the-docs
