--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,6 @@
-
+base:
+  url: lucianofedericopereira.github.io
+  folder: articles
 config_domain: lucianofedericopereira.github.io
 config_folder: articles
 meta:
