--- a/_config.yml
+++ b/_config.yml
@@ -6,6 +6,7 @@ config_folder: articles
 meta:
   author: Luciano Pereira
   repository: https://github.com/lucianofedericopereira
+  license: GPLv2
 links:
   LinkedIn: https://github.com/just-the-docs/just-the-docs
   GitHub: https://github.com/just-the-docs/just-the-docs-template      
