--- a/_config.yml
+++ b/_config.yml
@@ -25,6 +25,18 @@ collections:
     output: true
 defaults:
   - scope:
+      path: "index.md"
+    values:
+      layout: codecraft
+      comments: false
+      mermaid: false
+  - scope:
+      path: "category"
+    values:
+      layout: codecraft
+      comments: false
+      mermaid: false
+  - scope:
       path: "_css"
     values:
       layout: codecraft
