--- a/_config.yml
+++ b/_config.yml
@@ -17,7 +17,7 @@ links:
   GitHub: https://github.com/just-the-docs/just-the-docs-template      
 collections:
   css:
-    permalink: "/articles/:collection/:path/"
+    permalink: ":collection/:path/"
     output: true
   js:
     permalink: "/:collection/:path/"
