--- a/_config.yml
+++ b/_config.yml
@@ -59,9 +59,11 @@ utteranc:
   issue: title
   repo: lucianofedericopereira/comments
   src: https://utteranc.es/client.js
-version:
-  mermaid: 11.4.1
-  lunr: 2.3.9
+scripts:
+  mermaid: https://cdn.jsdelivr.net/npm/mermaid@11.4.1/dist/mermaid.min.js
+  lunr: https://cdn.jsdelivr.net/npm/lunr@2.3.9/lunr.min.js
+
+
 #gh_edit_branch: "main" # the branch that your docs is served from
 ## gh_edit_source: docs # the source that your files originate from
 
