--- a/.github/workflows/generate-search-index.yml
+++ b/.github/workflows/generate-search-index.yml
@@ -1,4 +1,4 @@
-name: Generate Search Index
+name: Generate and Deploy Search Index
 
 on:
   push:
@@ -38,15 +38,17 @@ jobs:
         env:
           JEKYLL_ENV: production
 
-      # Step 5: Generate Search Index
-      - name: Generate Search Index
-        run: ruby scripts/generate_search_data.rb
+      # Step 5: Upload the Built Site as an Artifact
+      - name: Upload Built Site
+        uses: actions/upload-pages-artifact@v1
+        with:
+          path: _site # This is the default Jekyll build output directory
 
-      # Step 6: Verify Search Index
-      - name: Verify Search JSON
-        run: ls -la _site/assets/json/search.json || echo "search.json file not found!"
-
-      # Step 7: Deploy to GitHub Pages
+  deploy:
+    runs-on: ubuntu-latest
+    needs: build
+    steps:
+      # Step 6: Deploy to GitHub Pages
       - name: Deploy to GitHub Pages
         uses: actions/deploy-pages@v4
         with:
