--- a/.github/workflows/generate-search-index.yml
+++ b/.github/workflows/generate-search-index.yml
@@ -38,17 +38,30 @@ jobs:
         env:
           JEKYLL_ENV: production
 
-      # Step 5: Upload the Built Site as an Artifact
-      - name: Upload Built Site
+      # Step 5: Generate Search Index
+      - name: Generate Search Index
+        run: ruby scripts/generate_search_data.rb
+
+      # Step 6: Verify Search Index File
+      - name: Verify Search JSON
+        run: |
+          if [ ! -f "assets/json/search.json" ]; then
+            echo "Error: search.json file not found!"
+            exit 1
+          fi
+          echo "search.json file exists and is ready."
+
+      # Step 7: Upload Built Site and Search Index
+      - name: Upload Site and Search Index
         uses: actions/upload-pages-artifact@v1
         with:
-          path: _site # This is the default Jekyll build output directory
+          path: _site # Upload the entire built site, including generated assets
 
   deploy:
     runs-on: ubuntu-latest
     needs: build
     steps:
-      # Step 6: Deploy to GitHub Pages
+      # Step 8: Deploy to GitHub Pages
       - name: Deploy to GitHub Pages
         uses: actions/deploy-pages@v4
         with:
