--- a/.github/workflows/generate-search-index.yml
+++ b/.github/workflows/generate-search-index.yml
@@ -4,7 +4,7 @@ on:
   push:
     branches:
       - main
-  workflow_dispatch: # Allows manual runs
+  workflow_dispatch: # Allows manual triggering.
 
 permissions:
   contents: read
@@ -26,7 +26,7 @@ jobs:
           ruby-version: '3.3'
           bundler-cache: true
 
-      # Step 3: Install Dependencies
+      # Step 3: Install Jekyll Dependencies
       - name: Install Jekyll Dependencies
         run: |
           gem install bundler
@@ -38,30 +38,17 @@ jobs:
         env:
           JEKYLL_ENV: production
 
-      # Step 5: Generate Search Index
-      - name: Generate Search Index
-        run: ruby scripts/generate_search_data.rb
-
-      # Step 6: Verify Search Index File
-      - name: Verify Search JSON
-        run: |
-          if [ ! -f "assets/json/search.json" ]; then
-            echo "Error: search.json file not found!"
-            exit 1
-          fi
-          echo "search.json file exists and is ready."
-
-      # Step 7: Upload Built Site and Search Index
-      - name: Upload Site and Search Index
+      # Step 5: Upload Built Site for GitHub Pages
+      - name: Upload Built Site
         uses: actions/upload-pages-artifact@v1
         with:
-          path: _site # Upload the entire built site, including generated assets
+          path: _site # This is the default Jekyll output folder.
 
   deploy:
     runs-on: ubuntu-latest
     needs: build
     steps:
-      # Step 8: Deploy to GitHub Pages
+      # Step 6: Deploy to GitHub Pages
       - name: Deploy to GitHub Pages
         uses: actions/deploy-pages@v4
         with:
