--- a/_config.yml
+++ b/_config.yml
@@ -18,7 +18,7 @@ links:
   GitHub: https://github.com/just-the-docs/just-the-docs-template      
 collections:
   css:
-    permalink: ":collection/:path/"
+    permalink: "/:collection/:path/"
     output: true
   js:
     permalink: ":collection/:path/"
