--- a/_config.yml
+++ b/_config.yml
@@ -50,6 +50,7 @@ defaults:
       layout: codecraft
       comments: false
       mermaid: false
+search_enabled: true
 search:
   heading_level: 3
   previews: 5
