--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,5 @@
 theme: just-the-docs
+search_enabled: false
 base:
   url: lucianofedericopereira.github.io
   folder: articles
@@ -50,13 +51,12 @@ defaults:
       layout: codecraft
       comments: false
       mermaid: false
-search_enabled: true
-search:
-  heading_level: 2
-  previews: 3
-  preview_words_before: 5
-  preview_words_after: 10
-  tokenizer_separator: /[\s/]+/
+#search:
+#  heading_level: 2
+#  previews: 3
+#  preview_words_before: 5
+#  preview_words_after: 10
+#  tokenizer_separator: /[\s/]+/
 utteranc:
   theme: github-light
   issue: title
