--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,73 @@
+#jekyll
 _site/
 .sass-cache/
 .jekyll-cache/
 .jekyll-metadata
 .bundle/
 vendor/
+
+# Common (all OS)
+*~
+.*.swp
+.*.swo
+*.bak
+*.tmp
+.cache/
+*.log
+core.*
+.#*
+*.old
+*.orig
+*.rej
+
+# Linux
+/tmp/
+*.lock
+*.pid
+.Trash-*
+*.o
+*.obj
+*.so
+*.dll
+*.exe
+*.out
+*.class
+*.pyc
+*.pyo
+*.egg-info/
+dist/
+build/
+
+# Windows
+Thumbs.db
+Thumbs.db:encryptable
+ehthumbs.db
+ehthumbs_vista.db
+[Dd]esktop.ini
+$RECYCLE.BIN/
+*.cab
+*.msi
+*.msix
+*.msm
+*.msp
+*.lnk
+*.stackdump
+
+# macOS
+.DS_Store
+.AppleDouble
+.LSOverride
+Icon?
+._*
+.DocumentRevisions-V100
+.fseventsd
+.Spotlight-V100
+.TemporaryItems
+.Trashes
+.VolumeIcon.icns
+.com.apple.timemachine.donotpresent
+.AppleDB
+.AppleDesktop
+Network Trash Folder
+Temporary Items
+.apdisk
