--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,6 @@
 theme: just-the-docs
 search_enabled: false
+search_file: https://lucianofedericopereira.github.io/articles/search.json
 base:
   url: lucianofedericopereira.github.io
   folder: articles
