--- a/_config.yml
+++ b/_config.yml
@@ -42,28 +42,28 @@ defaults:
   - scope:
       path: "index.md"
     values:
-      layout: codecraft
+      layout: codeCraft
       toc: false
       comments: false
       mermaid: false
   - scope:
       path: "category"
     values:
-      layout: codecraft
+      layout: codeCraft
       toc: false
       comments: false
       mermaid: false
   - scope:
       path: "_css"
     values:
-      layout: codecraft
+      layout: codeCraft
       toc: true
       comments: false
       mermaid: false
   - scope:
       path: "_js"
     values:
-      layout: codecraft
+      layout: codeCraft
       toc: true
       comments: false
       mermaid: false
