--- a/_config.yml
+++ b/_config.yml
@@ -51,6 +51,7 @@ defaults:
       path: "category"
     values:
       layout: codeCraft
+      banner: true
       toc: false
       comments: false
       mermaid: false
