--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
 theme: just-the-docs
 permalink: pretty
-posts: 10
+post_limit: 10
 sidebar_collections: false
 search_enabled: false
 search_file: https://lucianofedericopereira.github.io/articles/search.json
