--- a/_config.yml
+++ b/_config.yml
@@ -15,8 +15,8 @@ meta:
   license: GPLv2
   locale: en
 links:
-  LinkedIn: https://github.com/just-the-docs/just-the-docs
-  GitHub: https://github.com/just-the-docs/just-the-docs-template      
+  LinkedIn: https://www.linkedin.com/in/lucianofedericopereira/
+  GitHub: https://github.com/lucianofedericopereira
 fonts:
   - type: title
     name: Mediaan
